# DanhMucHanhChinh

./: README.md  districts.json  load_into_postgres.ipynb  provinces.json  pyproject.toml  requirements.txt  retrieving_subdivisions.py  test_districts.ipynb  test_wards.ipynb  wards.json
