[tool.poetry]
name = "danhmuchanhchinh"
version = "0.1.0"
description = "Explore Vietnam Administrative Subdivision API"
authors = ["Viet Than <thanhoangviet@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "2.22.0"
xmltodict = "0.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
